--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+  
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,4 +41,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+   
+    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 </html>
